<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="15dp" >

    <TextView
        android:id="@+id/ab_custom_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxWidth="150dp"
        android:paddingTop="2dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ab_custom_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_actionbar_cart_active"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ab_custom_card_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:paddingTop="8dp"
        android:text="0"
        android:textColor="?attr/first_active_color"
        android:textSize="12sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ab_custom_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/ab_custom_card"
        android:src="@drawable/ic_actionbar_search"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ab_custom_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/checkout"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ab_custom_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/sent"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ab_custom_clear_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ab_custom_cancel_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/ab_custom_search_et"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/ab_custom_cancel_search"
        android:background="?attr/ab_search_et"
        android:drawableLeft="@drawable/ic_actionbar_search"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:paddingBottom="-5dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

</RelativeLayout>